objects/Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address_1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address_2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <label>Call_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignID__c</fullName>
        <label>Campaign_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunicationPreference__c</fullName>
        <label>Communication_Preference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donotmail__c</fullName>
        <label>Do_not_mail</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EncounterDate__c</fullName>
        <label>Encounter_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other_Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Response_By_Campaign_Member__c</fullName>
        <label>Response By Campaign Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Member Responses</relationshipLabel>
        <relationshipName>Responses_By_Campaign_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Response_Detail__c</fullName>
        <description>This field will store response from campaign member</description>
        <label>Response Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_For_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response For Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Member Responses</relationshipLabel>
        <relationshipName>Responses_For_Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eMailOptInDate__c</fullName>
        <label>eMail_Opt_In_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>eMailOptIn__c</fullName>
        <label>eMail_Opt_In</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Interaction</label>
    <nameField>
        <displayFormat>Inter-{YYMMDD}-{00000}</displayFormat>
        <label>Interaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>